// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given an RatingElement component When it is rendered And the rating is not yours Then should match the snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "marginVertical": 5,
      "padding": 10,
    }
  }
  testID="ratingElement"
>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ECECEC",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "fontWeight": "bold",
          "marginTop": 5,
        }
      }
    >
      Xavi
       
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#f1c40f",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#f1c40f",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#BDC3C7",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#BDC3C7",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#BDC3C7",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#3E3C37",
          "fontSize": 16,
        }
      }
    >
      meh
    </Text>
  </View>
</View>
`;

exports[`Given an RatingElement component When it is rendered And the rating is yours Then should match the snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "marginVertical": 5,
      "padding": 10,
    }
  }
  testID="ratingElement"
>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#ECECEC",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "fontWeight": "bold",
          "marginTop": 5,
        }
      }
    >
      Xavi
       
      (you)
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#f1c40f",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#f1c40f",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#BDC3C7",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#BDC3C7",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          nativeID="animatedComponent"
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <Image
            collapsable={false}
            nativeID="animatedComponent"
            source={
              Object {
                "testUri": "../../react-native-ratings/dist/images/airbnb-star.png",
              }
            }
            style={
              Object {
                "height": 15,
                "margin": 3,
                "tintColor": "#BDC3C7",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": 15,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#3E3C37",
          "fontSize": 16,
        }
      }
    >
      meh
    </Text>
  </View>
</View>
`;
